# reinars

./: Cargo.toml  README.md
src/: lib.rs
test_data/: i_like_a_dog_sent.apertium_stream
